clean up webauthn dependencies